# kuula

./: .gitignore  README.md  config.toml  go.mod  go.sum
cli/: main.go
cli/cmd/: create.go  delete.go  deploy.go  init.go  root.go  run.go  serve.go  status.go  toml.go  version.go  yaml.go
cli/ml_project/: test.py
server/: server.go
server/python/torchserver/: __init__.py  model.py  pyproject.toml  pytorch-gpu.dockerfile  pytorch.dockerfile  test_model.py  torchserver.py
