[tool.poetry]
name = "torchserver"
version = "0.1.0"
description = ""
authors = ["bjornaer <maxemijo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
kserve = "^0.8.0"
# torch = {url = "https://download.pytorch.org/whl/cu111/torch-1.9.0%2Bcu111-cp39-cp39-linux_x86_64.whl", optional = true}

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
